src/styles/global.scss
@use 'reset';
@use 'config';

:root {
	color-scheme: light dark;
	--color: #111;
	--background: #fff;
	--special: #2e7d32;
	--border-color: #ccc;
}

[data-theme='dark'] {
	--color: #e0e0e0;
	--background: #1a1a1a;
	--special: #4caf50;
	--border-color: #444;
}

* {
	scrollbar-width: thin;
}

html,
body {
	font-family: config.$font-family;
	font-size: config.$font-size;
	color: config.$color;
	background-color: config.$background;
	margin: 0;
	min-height: 100vh;
	text-align: center;
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
}
h1,
.h1 {
	font-size: 2rem;
}
h2,
.h2 {
	font-size: 1.7rem;
}
h3,
.h3 {
	font-size: 1.4rem;
}
h4,
.h4 {
	font-size: 1.3rem;
}
h5,
.h5 {
	font-size: 1.2rem;
}
h6,
.h6 {
	font-size: 1.1rem;
}
a {
	&,
	&:visited,
	&:hover,
	&:focus {
		color: config.$special;
		text-decoration: none;
	}
}

.main {
	padding: 0.5rem;
	display: flex;
	flex: 1;
	overflow: auto;
	justify-content: flex-start;
	align-content: center;
	flex-direction: column;
	padding-top: 50px;
}

.special {
	color: config.$special;
}

.counter {
	display: grid;
	font-size: 2em;
	grid-template-columns: repeat(3, minmax(0, 1fr));
	margin-top: 2em;
	place-items: center;
}

.counter-message {
	text-align: center;
}

.hidden,
[hidden] {
	display: none;
}

